Added some more info

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -27,19 +27,28 @@
 
     <section class="about-me">
         <div class="gallery">
-            <img src="image1.jpg" alt="Image 1">
-            <img src="image2.jpg" alt="Image 2">
-            <img src="image3.jpg" alt="Image 3">
-            <img src="image4.jpg" alt="Image 4">
+            <img src="number-1-one.png" alt="Image 1">
+            <img src="number-1-one.png" alt="Image 2">
+            <img src="number-1-one.png" alt="Image 3">
+            <img src="number-1-one.png" alt="Image 4">
         </div>
 
         <div class="about-text">
-            <h2>Hi, I'm Jimmie!</h2>
-            <p>
-                Welcome to my personal portfolio! I am passionate about software development and machine learning.
-                Here's a glimpse of some of my favorite moments and projects I've worked on. Alongside these
-                images, I am constantly learning and honing my skills in coding, data science, and system
-                programming. Let's build something amazing together!
+            <h2>Hi, It's Me Jimmie Again</h2>
+            <p style="font-family: 'Afacad Flux', 'Courier New', Courier, monospace;">
+                Welcome to my about me page that discusses not only my interest when it comes to
+                Computer Science but my other interests as well. 
+                
+                On the left, you can see pictures of the things I enjoy working on so scroll as far as you'd like to see what I work on. 
+            </p>
+
+            <h2>
+                Machine Learning
+            </h2>
+            <p style="font-family: 'Afacad Flux', 'Courier New', Courier, monospace;">
+                The area of Machine Learning is one of my favorite topics when it comes to Computer Science. As of right now
+                I have taken Wright State's Applied Machine Learning Course and finished with an A. I am currently enrolled and will be completing
+                the intro to machine learning course after this Fall 2024 Semester.
             </p>
         </div>
     </section>
