Updated more secitons

--- a/homePage.html
+++ b/homePage.html
@@ -132,7 +132,7 @@
             <div class="text" style="font-family: 'Afacad Flux', 'Courier New', Courier, monospace;
     background-color: #eeeff1;">
                 Over the course of the last three years, I've gained experience and an advanced understanding 
-                on a variety of skills. These skills are as follows: HTML5, CSS, GIT, PYTHON, SCIKIT-LEARN, TENSORFLOW, PYTORCH (LIMITED), 
+                on a variety of skills. These skills are as follows: HTML5, CSS, JAVACRIPT, GIT, PYTHON, SCIKIT-LEARN, TENSORFLOW, PYTORCH (LIMITED), JAVA, C++, and C.
                 This section also includes courses I've completed with Coursera.
             </div>
 
@@ -148,13 +148,18 @@
                 </div>
 
                 <div class="cell">
+                    <i class="fa-brands fa-js"></i>
+                    <span>JAVASCRIPT (Limited)</span>
+                </div>
+
+                <div class="cell">
                     <i class="fa-brands fa-git-alt"></i>
                     <span>GIT</span>
                 </div>
                 
                 <div class="cell">
                     <i class="fa-brands fa-python"></i>
-                    <span>PYTHON</span>
+                    <span>PYTHON (Intermediate)</span>
                 </div>
 
                 <div class="cell">
@@ -171,11 +176,24 @@
                     <i class="fa-brands fa-python"></i>
                     <span>PYTORCH (LIMITED)</span>
                 </div>
+
+                <div class="cell">
+                    <i class="fa-brands fa-java"></i>
+                    <span>JAVA (Intermediate)</span>
+                </div>
+                
+                <div class="cell">
+                    <span>C++ (Advanced Beginner)</span>
+                </div>
+
+                <div class="cell">
+                    <span>C (Limited)</span>
+                </div>
             </div>
         </section>
 
         <section class="contact-section id="contact">
-            <h2>CONTACT</h2>
+            <h2 style="text-align: center;">CONTACT</h2>
 
             <div class="group">
                 <div class="text" style="font-family: 'Afacad Flux', 'Courier New', Courier, monospace;
